// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldUtils <FieldIcon /> accepts additional props 1`] = `
<span
  class="euiToken kbnFieldIcon emotion-euiToken-square-none-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenDate"
    title="Date"
  >
    Date
  </span>
</span>
`;

exports[`FieldUtils <FieldIcon /> renders properly 1`] = `
<span
  class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenDate"
    title="Date"
  >
    Date
  </span>
</span>
`;

exports[`FieldUtils <FieldIcon /> renders properly scripted fields 1`] = `
<span
  class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenDate"
    title="Date"
  >
    Date
  </span>
</span>
`;
